--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -5,7 +5,6 @@
     <div class="container px-4 px-lg-5 mt-5">
         <form action="/editReview" method="POST">
             <fieldset style="width: 0px;">
-              <legend>Edit a Country:</legend>
               <input type="hidden" id="review_id" name="review_id" required
               value="<%=reviewData[0].review_id %>">
               <label for="reviewer_name">Reviewer Name:</label>
@@ -15,8 +14,7 @@
               <label for="review_text">Review Text:</label>
               <textarea type="text" maxlength="250" id="review_text" class="customText" 
               rows="4" cols="50" name="review_text" required
-               value="<%=reviewData[0].review_text %>">
-              </textarea>
+              value="<%=reviewData[0].review_text %>"></textarea>
               <br><br>
             </fieldset>
             <button type="submit">Save</button>
